# suger-python

./: .gitignore  README.md  RoadMap.md  pyproject.toml  setup.py  upload.sh  安装.md
sugar/: __init__.py
suger/: __init__.py  string_decorator.py
suger/common/: CsvUtils.py  FileCompareUtils.py  FileUtils.py  JsonUtils.py  ObjectUtils.py  SSH.py  StringUtils.py  __init__.py
suger/data_operator/: CsvUtils.py  ExcelUtils.py  XmlUtils.py  __init__.py
suger/decorator/: csv_decorator.py
suger/stream/: Stream.py
suger/terminal/: TerminalUtils.py  __init__.py
tests/: test_CsvUtils.py  test_ExcelUtils.py  test_FileCompareUtils.py  test_FileUtils.py  test_JsonUtils.py  test_ObjectUtils.py  test_SSH.py  test_Stream.py  test_StringUtils.py  test_Suger.py  test_TerminalUtils.py  test_XmlUtils.py  test_csv_decorator.py  test_string_decorator.py
tests/temp/: example.xml
