[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "sugar"
version = "0.0.3"
authors = [
    { name = "SolarisNeko", email = "1417015340@qq.com" },
]

description = "try to upload to Pypi"
readme = "README.md"

requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SolarisNeko/python-sugar"
"Bug Tracker" = "https://github.com/SolarisNeko/python-sugar/issues"